--- a/sign_up.html
+++ b/sign_up.html
@@ -61,6 +61,6 @@
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/hmac-sha256.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/components/enc-base64-min.js"></script>
-    <script src="script/SignUp.js"></script>
+    <script src="https://kkotbot-docs.kro.kr/script/SignUp.js"></script>
 </body>
 </html>
