--- a/Q&A.html
+++ b/Q&A.html
@@ -43,7 +43,8 @@
     </div>
     <section id="body">
         <section id="summary" style="text-decoration: none;color: black;">
-
+            <div id="content" style="display: none;"></div>
+            <div id="comments" style="display: none;"></div>
         </section>
     </section>
     <script type="text/javascript">
