--- a/Q&A.html
+++ b/Q&A.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="script/dark.js"></script>
     <script type="text/javascript" src="script/toast.js"></script>
     <script type="text/javascript" src="script/inko.js"></script>
-    <script type="text/javascript" src="script/search.js"></script>
+    <!--script type="text/javascript" src="script/search.js"></script-->
     <script type="text/javascript" src="script/copy.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link id="favicon" rel="shortcut icon" type="image/x-icon" href="img/icon.ico">
