--- a/Q&A.html
+++ b/Q&A.html
@@ -59,7 +59,7 @@
          https://firebase.google.com/docs/web/setup#available-libraries -->
     <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-database.js"></script>
 
     <script>
         // Your web app's Firebase configuration
@@ -87,7 +87,7 @@
                     comments.push({
                         base: base,
                         value: value,
-                        by: firebase.auth().currentUser.uid,
+                        //by: firebase.auth().currentUser.uid,
                         ts: new Date
                     });
                     postRef.doc(targetId).update({
@@ -112,7 +112,7 @@
             postRef.add({
                 title: title,
                 value: value,
-                by: firebase.auth().currentUser.uid,
+                //by: firebase.auth().currentUser.uid,
                 ts: new Date,
                 comments: []
             }).then(function(docRef) {
@@ -128,9 +128,9 @@
                     console.log(doc.data());
                     //내용표시
                     
-                    if(doc.data().by==firebase.auth().currentUser.uid){
+                    /*if(doc.data().by==firebase.auth().currentUser.uid){
                        //수정, 삭제 등 표시
-                    }
+                    }*/
                 } else {
                     // doc.data() will be undefined in this case
                     console.log("No such document!");
