--- a/Q&A.html
+++ b/Q&A.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="script/inko.js"></script>
     <!--script type="text/javascript" src="script/search.js"></script-->
     <script type="text/javascript" src="script/copy.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link id="favicon" rel="shortcut icon" type="image/x-icon" href="img/icon.ico">
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
