--- a/Q&A.html
+++ b/Q&A.html
@@ -129,6 +129,9 @@
                     console.log(doc.data());
                     //내용표시
                     
+                    document.getElementById('content').style.display='block';
+                    document.getElementById('comments').style.display='block';
+                    
                     /*if(doc.data().by==firebase.auth().currentUser.uid){
                        //수정, 삭제 등 표시
                     }*/
