--- a/Q&A.html
+++ b/Q&A.html
@@ -126,10 +126,10 @@
         if (location.href.startsWith('https://kkotbot-docs.kro.kr/Q&A?id=')) {
             postRef.doc(location.href.substring('https://kkotbot-docs.kro.kr/Q&A?id='.length)).get().then(function(doc) {
                 if (doc.exists) {
-                    console.log(doc.data());
                     //내용표시
                     
                     document.getElementById('content').style.display='block';
+                    document.getElementById('content').innerHTML=marked(doc.data().content);
                     document.getElementById('comments').style.display='block';
                     
                     if(doc.data().by==$.cookie('id')){
