--- a/Q&A.html
+++ b/Q&A.html
@@ -31,7 +31,7 @@
 
 <body>
     <header>
-        <a href='index.html'><img id="kkotb_rfnc" src="img/docs.png"></a>
+        <a href='https://kkotbot-docs.kro.kr/'><img id="kkotb_rfnc" src="img/docs.png"></a>
         <div id="wrap">
             <form action="" autocomplete="off">
                 <input id="search" data-bg="#ff0d86" name="search" type="text" placeholder="검색할 내용을 입력하세요.">
