--- a/my.html
+++ b/my.html
@@ -77,7 +77,9 @@
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
         firebase.analytics();
-        document.title=$.cookie('id');
+        firebase.database().ref($.cookie('id')).once('value').then(function(snapshot) {
+            document.title=snapshot.val().nickname;
+        });
   </script>
 </body>
 
