--- a/new.html
+++ b/new.html
@@ -32,6 +32,7 @@
 </head>
 
 <body>
+    <textarea id='editor'></textarea>
     <script type="text/javascript">
         if(!$.cookie('id')) location.href='login';
         if ($("section#body").width == 0) {
