--- a/new.html
+++ b/new.html
@@ -74,7 +74,7 @@
           readOnly: true,
           theme: 'snow'
         };
-        var editor = new Quill('#editor', options);
+        var editor = new Quill(document.getElementById('editor'), options);
   </script>
 </body>
 
