--- a/new.html
+++ b/new.html
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-    <textarea id='editor'></textarea>
+    <div id='editors'><div id='toolbar'></div><div id='editor'></div></div>
     <script type="text/javascript">
         if(!$.cookie('id')) location.href='login';
         if ($("section#body").width == 0) {
