--- a/new.html
+++ b/new.html
@@ -70,8 +70,8 @@
           modules: {
             toolbar: '#toolbar'
           },
-          placeholder: 'Compose an epic...',
-          readOnly: true,
+          placeholder: '여기에 내용을 입력...',
+          readOnly: false,
           theme: 'snow'
         };
         var editor = new Quill(document.getElementById('editor'), options);
