--- a/my.html
+++ b/my.html
@@ -47,7 +47,7 @@
         </section>
     </section>
     <script type="text/javascript">
-        if(!$.cookie('id')) location.href='login';
+        if(!firebase.auth().currentUser) location.href='login';
         if ($("section#body").width == 0) {
             location.reload();
         }
@@ -60,6 +60,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-auth.js"></script>
 
     <script>
         // Your web app's Firebase configuration
@@ -77,7 +78,7 @@
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
         firebase.analytics();
-        firebase.database().ref($.cookie('id')).once('value').then(function(snapshot) {
+        firebase.database().ref(firebase.auth().currentUser).once('value').then(function(snapshot) {
             if(location.href.startsWith('https://kkotbot-docs.kro.kr/my?search=')){
             }else{
                 document.title=snapshot.val().nickname;
