--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
                 <input type="password" id="pswd" placeholder="비밀번호"><br>
                 <button id="complete" class="btn">로그인</button>
             </form>
-            <p class="sml">계정이 없으신가요? <a href="sign_up.html">계정을 만들어보세요!</a></p>
+            <p class="sml">계정이 없으신가요? <a href="sign_up">계정을 만들어보세요!</a></p>
         </section>
     </div>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
