--- a/my.html
+++ b/my.html
@@ -82,7 +82,7 @@
             if(location.href.startsWith('https://kkotbot-docs.kro.kr/my?search=')){
             }else{
                 document.title=snapshot.val().nickname;
-                document.getElementById('summary').innerHTML+='<img style=\"border-radius: 50%;\" height=\"100px\" src=\"'+snapshot.val().profile+'\"/>'
+                document.getElementById('summary').innerHTML+='<img style=\"border-radius: 50%; box-shadow: 0rem 0rem 0.4rem 0rem #b1b1b1; border-radius: 3rem;\" height=\"100px\" src=\"'+snapshot.val().profile+'\"/>'
             }
         });
   </script>
