--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
         </section>
     </div>
     <script>
-        if(!!firebase.auth().currentUser) location.href='login';
+        if(!!firebase.auth().currentUser) location.href='https://kkotbot-docs.kro.kr/';
     </script>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-app.js"></script>
