--- a/new.html
+++ b/new.html
@@ -79,7 +79,8 @@
                     }],
                     ['bold', 'italic', 'underline'],
                     ['image', 'code-block']
-                ]
+                ],
+                syntax: true
             },
             placeholder: '여기 내용을 입력...',
             theme: 'snow' // or 'bubble'
