--- a/Q&A.html
+++ b/Q&A.html
@@ -79,7 +79,8 @@
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
         firebase.analytics();
-        //if(!firebase.auth().currentUser) location.href='login';
+        console.log(firebase.auth().currentUser)
+        if(!firebase.auth().currentUser) location.href='login';
         var firestore = firebase.firestore();
         var postRef = firestore.collection('posts');
 
