--- a/new.html
+++ b/new.html
@@ -69,7 +69,7 @@
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
         firebase.analytics();
-        //if (!firebase.auth().currentUser) location.href = 'login';
+        firebase.auth().onAuthStateChanged(user => {if(!user){location.href='login'}});
         
         var editor = new Quill('#editor', {
             modules: {
