--- a/new.html
+++ b/new.html
@@ -69,7 +69,7 @@
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
         firebase.analytics();
-        firebase.auth().onAuthStateChanged(user => {if(!user){location.href='login'}});
+        firebase.auth().onAuthStateChanged(user => {if(!user){location.href='login?redirect=new'}});
         
         var editor = new Quill('#editor', {
             modules: {
