--- a/index.html
+++ b/index.html
@@ -3215,7 +3215,8 @@
     <!-- TODO: Add SDKs for Firebase products that you want to use
          https://firebase.google.com/docs/web/setup#available-libraries -->
     <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-analytics.js"></script>
-
+    <script defer src="https://www.gstatic.com/firebasejs/7.21.1/firebase-auth.js"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/7.21.1/firebase-firestore.js"></script>
     <script>
       // Your web app's Firebase configuration
       // For Firebase JS SDK v7.20.0 and later, measurementId is optional
