--- a/index.html
+++ b/index.html
@@ -3239,5 +3239,8 @@
             location.reload();
         }
     </script>
+    <script>
+        Notification.requestPermission()    
+    </script>
 </body>
 </html>
