--- a/sign_up.html
+++ b/sign_up.html
@@ -29,6 +29,7 @@
                 <img id="profile"><input id="profile" type="file" accept="image/*"><br>
                 <button id="complete" class="btn">회원가입</button>
             </form>
+            <p class="sml">이미 회원가입 하셨나요? <a href="login">로그인 하러가기!</a></p>
         </section>
     </div>
 
