--- a/my.html
+++ b/my.html
@@ -45,6 +45,9 @@
     <section id="body">
         <section id="summary" style="text-decoration: none;color: black;">
             <div id="profile"></div>
+            <div id="change_pswd"></div>
+            <div id="change_email"></div>
+            <div id="change_id"></div>
         </section>
     </section>
     <script type="text/javascript">
