--- a/ai.html
+++ b/ai.html
@@ -14,6 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/toxicity"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/universal-sentence-encoder"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/qna"> </script>
     <link id="favicon" rel="shortcut icon" type="image/x-icon" href="img/icon.ico">
     <title></title>
 </head>
