--- a/ai.html
+++ b/ai.html
@@ -68,7 +68,7 @@ use.load().then(model => {
                 }
                 
                 function logQNA(answers){
-                    if(a==[]){
+                    if(answers==[]){
                         console.log('no answers found');
                     }else{
                         console.log(question + '\n' + answers[0].text + '\nscore =>' + answers[0].score + '\n' + (Date.now() - start) + 'ms');
