--- a/ai.html
+++ b/ai.html
@@ -43,6 +43,7 @@
             };
             QNA("What does replier.reply do?");
         });
+        console.log('try QNA(\'what is rhino?\') in console')
     </script>
 </body>
 
