--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="script/inko.js"></script>
     <script type="text/javascript" src="script/search.js"></script>
     <script type="text/javascript" src="script/copy.js"></script>
+    <script type="text/javascript">if($("section#body").width == 0){ location.reload(); }</script>
     <link id="favicon" rel="shortcut icon" type="image/x-icon" href="img/icon.ico">
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/sideBar.css">
@@ -3516,10 +3517,5 @@
             </div>
         </section>
     </section>
-    <script type="text/javascript">
-        if($("section#body").width == 0){
-            location.reload();
-        }
-    </script>
 </body>
 </html>
