--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="KakaotalkBot Docs | 카카오톡 봇 문서">
-    <meta name="keywords" content="카카오톡봇 문서, kakaotalk bot docs, 카카오톡 봇, 카카오봇, 자동응답 봇, 메신저봇, 메신저봇R">
+    <meta name="title" content="카카오톡 봇 문서">
+    <meta name="keywords" content="카카오톡 봇 문서, kakaotalk bot docs, 카카오톡 봇, 카카오봇, 자동응답 봇, 메신저봇, 메신저봇R">
     <meta name="description" content="카카오톡 봇의 정보가 모인 카카오톡 봇 문서입니다.">
     <meta name="author" content="nolbo">
     <meta property="og:type" content="website">
@@ -20,7 +20,6 @@
     <script type="text/javascript" src="script/inko.js"></script>
     <script type="text/javascript" src="script/search.js"></script>
     <script type="text/javascript" src="script/copy.js"></script>
-    <script type="text/javascript">if($("section#body").width == 0){ location.reload(); }</script>
     <link id="favicon" rel="shortcut icon" type="image/x-icon" href="img/icon.ico">
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/sideBar.css">
@@ -3517,5 +3516,6 @@
             </div>
         </section>
     </section>
+    <script type="text/javascript">if($("section#body").width == 0){ location.reload(); }</script>
 </body>
 </html>
