--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="naver-site-verification" content="db79b112896337a515066363085c4f9ad5d27310" />
-    <meta name="title" content="카카오톡 봇 문서">
-    <meta name="keywords" content="카카오톡 봇 문서, kakaotalk bot docs, 카카오톡 봇, 카카오봇, 자동응답 봇, 메신저봇, 메신저봇R">
+    <meta name="title" content="KakaotalkBot Docs | 카카오톡 봇 문서">
+    <meta name="keywords" content="카카오톡봇 문서, kakaotalk bot docs, 카카오톡 봇, 카카오봇, 자동응답 봇, 메신저봇, 메신저봇R">
     <meta name="description" content="카카오톡 봇의 정보가 모인 카카오톡 봇 문서입니다.">
     <meta name="author" content="nolbo">
     <meta property="og:type" content="website">
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="style/mobile.css">
     <link rel="stylesheet" href="style/dark.css">
     <link rel="stylesheet" href="style/toast.css">
-    <title>KakaotalkBot Docs</title>
+    <title>Kakaotalk Bot Docs | 카카오톡 봇 문서</title>
 </head>
 <body>
     <header>
