--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="script/jquery.js"></script>
     <script type="text/javascript" src="script/jquery-ui.js"></script>
     <script>
-        if(new Date().getMonth == 9){
+        if(new Date().getMonth() == 9){
             $('meta[property = og:image]').attr('content', 'img/korea.jpg');
         }
     </script>
