--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <meta property="og:url" content="https://kkotbot-docs.kro.kr">
     <meta property="og:title" content="KakaotalkBot Docs">
     <meta property="og:description" content="카카오톡 봇의 정보가 모인 카카오톡 봇 문서입니다.">
-    <meta property="og:image" content="img/grp.jpg">
+    <meta id="ogimg" property="og:image" content="img/grp.jpg">
     <script type="text/javascript" src="script/jquery.js"></script>
     <script type="text/javascript" src="script/jquery-ui.js"></script>
     <script>
         if(new Date().getMonth() == 9){
-            $('meta[property = og:image]').attr('content', 'img/korea.jpg');
+            $('#ogimg').attr('content', 'img/korea.jpg');
         }
     </script>
     <script type="text/javascript" src="script/animation.js"></script>
