--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="nolbo">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://kkotbot-docs.kro.kr">
-    <meta property="og:title" content="KakaotalkBot Docs">
+    <meta property="og:title" content="KakaotalkBot Docs | 카카오톡 봇 문서">
     <meta property="og:description" content="카카오톡 봇의 정보가 모인 카카오톡 봇 문서입니다.">
     <meta id="ogimg" property="og:image" content="img/grp.jpg">
     <script type="text/javascript" src="script/jquery.js"></script>
