--- a/index.html
+++ b/index.html
@@ -11,15 +11,10 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://kkotbot-docs.kro.kr">
     <meta property="og:title" content="Kakaotalk Bot Docs | 카카오톡 봇 문서">
-    <meta id="ogimg" property="og:image" content="img/grp.jpg">
+    <meta property="og:image" content="img/grp.jpg">
+    <meta property="og:description" content="카카오톡 봇의 정보가 모인 카카오톡 봇 문서입니다.">
     <script type="text/javascript" src="script/jquery.js"></script>
     <script type="text/javascript" src="script/jquery-ui.js"></script>
-    <script>
-        if(new Date().getMonth() == 9){
-            $('#ogimg').attr('content', 'img/korea.jpg');
-        }
-    </script>
-    <meta property="og:description" content="카카오톡 봇의 정보가 모인 카카오톡 봇 문서입니다.">
     <script type="text/javascript" src="script/animation.js"></script>
     <script type="text/javascript" src="script/dark.js"></script>
     <script type="text/javascript" src="script/toast.js"></script>
