--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="ALL">
+    <meta name ="content-language" content="kr">
     <meta name="naver-site-verification" content="db79b112896337a515066363085c4f9ad5d27310" />
     <meta name="title" content="Kakaotalk Bot Docs | 카카오톡 봇 문서">
     <meta name="keywords" content="카카오톡봇 문서, kakaotalk bot docs, 카카오톡 봇, 카카오봇, 자동응답 봇, 메신저봇, 메신저봇R">
