--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script type="text/javascript" src="script/inko.js"></script>
     <script type="text/javascript" src="script/search.js"></script>
     <script type="text/javascript" src="script/copy.js"></script>
+    <link rel="canonical" href="https://kkotbot-docs.kro.kr">
     <link id="favicon" rel="shortcut icon" type="image/x-icon" href="img/icon.ico">
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/sideBar.css">
