--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="naver-site-verification" content="db79b112896337a515066363085c4f9ad5d27310" />
     <meta name="title" content="Kakaotalk Bot Docs | 카카오톡 봇 문서">
     <meta name="keywords" content="카카오톡봇 문서, kakaotalk bot docs, 카카오톡 봇, 카카오봇, 자동응답 봇, 메신저봇, 메신저봇R">
-    <meta name="description" content="카카오톡 봇의 정보가 모인 카카오톡 봇 문서입니다.">
+    <meta name="description" content="카카오톡 봇의 정보를 정리한 카카오톡 봇 문서입니다.">
     <meta name="author" content="nolbo">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://kkotbot-docs.kro.kr">
